--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,6 +16,7 @@ import FormComponent from "../components/FormComponent.astro";
   <body>
     <Header title="YEPHA" />
     <main>
+      <Nyhedsbrev />
       <Spotyfi />
       <Liveevents />
       <About />
