--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@ const { title } = Astro.props;
 ---
 
 <header>
-  <div class="logo">{title}</div>
+  <a href="/" class="logo">{title}</a>
   <nav class="menu">
     <a href="/">HOME</a>
     <a href="/music">MUSIC</a>
@@ -31,9 +31,10 @@ const { title } = Astro.props;
       font-family: inter;
     }
 
-    .logo {
+    a .logo {
       font-size: 120px;
       font-weight: bolder;
+      
     }
 
     .menu {
@@ -109,6 +110,8 @@ const { title } = Astro.props;
     .logo {
       font-size: 210px;
       font-weight: bold;
+      text-decoration: none; 
+     color: rgba(0, 0, 0, 0.91);
     }
 
     .menu {
