--- a/src/components/Nyhedsbrev.astro
+++ b/src/components/Nyhedsbrev.astro
@@ -4,65 +4,69 @@
   <div class="form-container">
         <h2>NYHEDSBREV</h2>
         <form action="netlify" >
+          
 <p>Skriv dig op til nyhedsbrevet og vær den første, der modtager besked om nye koncerter, merchandise og meget mere.
 </p>
-            <label for="email">E-mail:</label>
-            <input type="email" id="email" name="email" required>
-
-            <button type="submit">TILMELD</button>
+<div class="skærsilden">
+<input class="input" type="email" id="email" name="email" placeholder="E-MAIL" required>
+<button type="submit">TILMELD</button>
+</div>
         </form>
+        
+        
     </div>
-
-
-
-
-
 <style>
 
-/*-----------NYHEDSBREV---------*/
-/* Formularcontainer */
 
+/*-----------NYHEDSBREV---------*/
+
+.skærsilden {
+display: grid;
+justify-content: center;
+gap: 20px;
+}
 .form-container {
 position: relative;
-background-color: black;
- width: 400px;
-  height: 400px
-  
-}
-
-.nyhedstekst {
-  color: #ffffff;
+align-self: center;
+background-color: rgba(0, 0, 0, 0.84);
+width: 400px;
+height: 400px;
+padding-top: 10px;
 }
 
 h2 {
   text-align: center;
-  font-size: 32px;
+  font-size: 40px;
   color: #ffffff;
   margin-bottom: 20px;
+   font-family: "Inter", serif;
+  font-style: normal;
 }
 
 p {
   text-align: center;
   color: #fff;
+   font-family: "Lato", sans-serif;
+  font-style: normal;
+  
 }
-input, {
+
+.input {
+  display: center;
+  text-align: center;
   width: 100%; /* Bedre responsivitet */
-  padding: 25px; /* Juster padding */
-  margin-bottom: 15px;
-  border-radius: 25px;
   font-size: 16px;
+  padding: 10px;
   box-sizing: border-box;
 }
 
 button {
-  width: 10%; /* Fyld hele bredden */
-  padding: 15px; /* Øget padding for bedre klikoplevelse */
+  padding: 8px;
   background-color: #ef4d2e;
   color: #fff;
   border: none;
-  border-radius: 5px;
+  border-radius: 100px;
   font-size: 19px;
-  cursor: pointer;
 }
 
 button:hover {
