--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -3,7 +3,9 @@
     <h1 class="streg1">ABOUT</h1>
     <p class="tekstabout">Yepha har sat sit præg på den danske musikscene med en stil, der balancerer skarpe tekster og melodiske hooks. Fra Ufo Yepha-dagene til solokarrieren har han leveret tracks som "Det Stikker Helt Af" og "Ik Gør det," der stadig holder. Hans musik er en blanding af rå energi og catchy vibes, der rammer bredt. Med en lyd, der går sin egen vej, har Yepha inspireret både fans og nye kunstnere.</p>
   </div>
-  <img src="billeder/merch.svg" alt="Drejende Billede" class="drejende-billede" />
+  <div class="drejende-billede">
+    <img src="billeder/merch.svg" alt="Drejende Billede" class="drejende-billede" />
+  </div>
 </div>
 
 <style>
@@ -21,19 +23,11 @@
     text-align: center;
     margin-left: 100px;
   }
-
-  .vinylplade {
-    width: 200px;
-    margin-left: 300px;
-  }
-
   .streg1 {
     display: flex;
     text-align: center;
     font-family: "Inter", serif;
     display: flex;
-    position: relative;
-    right: 30px;
     display: inline-block;
     border-bottom: 1px solid black;
     padding-left: 350px;
@@ -57,6 +51,37 @@
     }
   }
 
-  @media (min-width: 1000px) {
+  @media (max-width: 1000px) {
+    .about {
+      display: block;
+      height: auto;
+    }
+
+    .tekstabout {
+      display: grid;
+      text-align: center;
+      display: flex;
+      justify-content: center; /* Center horizontally */
+      align-items: center; /* Center vertically */
+      margin: 39px;
+    }
+    img {
+      width: 100%; /* Responsive image */
+      height: auto; /* Maintain aspect ratio */
+      display: block; /* Remove bottom space */
+    }
+    .drejende-billede {
+      display: grid;
+      justify-content: center; /* Center horizontally */
+      align-items: center;
+      margin: 60px;
+    }
+
+    .streg1 {
+      display: flex;
+      text-align: center;
+      /* margin: 30px; */
+      padding: 0px;
+    }
   }
 </style>
