--- a/src/components/Liveevents.astro
+++ b/src/components/Liveevents.astro
@@ -29,17 +29,34 @@
   }
   .billetter {
     float: right;
-padding-left: 150px;
+    padding-left: 150px;
+  }
+  .h2desktop {
+    display: flex;
+    justify-content: center;
+    font-family: "Inter", serif;
+    text-align: center;
   }
 
-  @media (min-width: 1000px) {
+  @media (max-width: 1000px) {
     .liveevents,
     .pdesktop {
+      padding: 20px;
+      font-size: 10px;
+      align-content: center;
+    }
+
+    .venstre-tekst {
+      text-indent: 0px;
+      border-bottom: 1px solid black;
+      padding-right: 20px;
+      font-size: 10px;
     }
     .h2desktop {
       display: flex;
       justify-content: center;
       font-family: "Inter", serif;
+      text-align: center;
     }
   }
 </style>
