--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -31,10 +31,11 @@ const { title } = Astro.props;
       font-family: inter;
     }
 
-    a .logo {
+    .logo {
       font-size: 120px;
       font-weight: bolder;
-      
+      text-decoration: none;
+      color: rgba(0, 0, 0, 0.91);
     }
 
     .menu {
@@ -110,8 +111,8 @@ const { title } = Astro.props;
     .logo {
       font-size: 210px;
       font-weight: bold;
-      text-decoration: none; 
-     color: rgba(0, 0, 0, 0.91);
+      text-decoration: none;
+      color: rgba(0, 0, 0, 0.91);
     }
 
     .menu {
