--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import FormComponent from "../components/FormComponent.astro";
   <body>
     <Header title="YEPHA" />
     <main>
-      <Nyhedsbrev />
+      <!-- <Nyhedsbrev /> -->
       <Spotyfi />
       <Liveevents />
       <About />
