--- a/src/components/FormComponent.astro
+++ b/src/components/FormComponent.astro
@@ -85,7 +85,7 @@ import Button from "../components/Button.astro";
   }
 </style>
 
-<a href="#special-component">
+<a href="/src/components/FormComponent">
   <div class="special-component">
     <h1>BOOK HER</h1>
     <p>Udfyld formularen nedenfor eller send en mail til mig på kontakt@jeppewahlstrom.dk</p>
