--- a/src/components/FormComponent.astro
+++ b/src/components/FormComponent.astro
@@ -50,8 +50,6 @@ import Button from "../components/Button.astro";
   input[type="text"],
   input[type="email"],
   input[type="tel"],
-  input[type="date"],
-  input[type="time"],
   select {
     width: 100%;
     padding: 10px;
@@ -81,6 +79,8 @@ import Button from "../components/Button.astro";
       font-style: normal;
       font-size: 10px;
       text-decoration: none;
+      border: none; /* Remove border */
+      outline: none; /* Remove outline */
     }
   }
 </style>
