mobil version af musikvideoer

--- a/src/pages/music.astro
+++ b/src/pages/music.astro
@@ -140,5 +140,12 @@ console.log(singler);
       font-style: normal;
       font-size: 64px;
     }
+
+    @media (max-width: 1000px) {
+      .videoer {
+        display: block;
+        padding: 30px;
+      }
+    }
   </style>
 </Layout>
