link til musikvideoer

--- a/src/pages/music.astro
+++ b/src/pages/music.astro
@@ -49,15 +49,15 @@ console.log(singler);
       </div>
       <div class="videoer">
         <div>
-          <img src="/billeder/pigervideo.webp" alt="piger" />
+          <a href="https://www.youtube.com/watch?v=cuM3jj36Q_o"><img src="/billeder/pigervideo.webp" alt="piger" /></a>
           <h1>Piger</h1>
         </div>
         <div>
-          <img src="/billeder/opmedhåret.webp" alt="piger" />
+          <a href="https://www.youtube.com/watch?v=k7MA5Rc1cjY"><img src="/billeder/opmedhåret.webp" alt="piger" /></a>
           <h1>Op med håret</h1>
         </div>
         <div>
-          <img src="/billeder/hjerneblødning.webp" alt="piger" />
+          <a href="https://www.youtube.com/watch?v=l5rEs7AzX_w"><img src="/billeder/hjerneblødning.webp" alt="piger" /></a>
           <h1>Hjerneblødning</h1>
         </div>
       </div>
