header på mobil

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -96,6 +96,9 @@ const { title } = Astro.props;
     .menu.active {
       display: flex;
     }
+    .logo {
+      font-size: 80px;
+    }
   }
 
   /* -------------- DET HER ER DESKTOP ---------------- */
