--- a/src/pages/acting.astro
+++ b/src/pages/acting.astro
@@ -277,7 +277,8 @@ import FormComponent from "../components/FormComponent.astro";
     }
 
     .img1 {
-      display: none;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
     }
 
     .img2 {
