footer link reniew

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,6 +11,8 @@
 
   <div class="nav_container">
     <!-- Ikoner og knap i én række -->
+
+
     <div class="icon_button_row">
       <a href="https://www.tiktok.com/@_yepha" target="_blank">
         <img src="/billeder/tiktok.svg" alt="TikTok" />
@@ -18,7 +20,7 @@
       <a href="https://www.instagram.com/__yepha/?hl=da" target="_blank">
         <img src="/billeder/instagram.svg" alt="Instagram" />
       </a>
-      <a href="https://open.spotify.com/album/..." target="_blank">
+      <a href="https://open.spotify.com/artist/5asGLnsKzGu0vUCRFSjibL" target="_blank">
         <img src="/billeder/spotyfi.svg" alt="Spotify" />
       </a>
       <button>BOOK</button>
@@ -33,6 +35,8 @@
 </footer>
 
 <style>
+
+
   /*------------ DET HER ER MOBIL------------ */
   @media (max-width: 1024px) {
     footer {
