book knap footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -23,7 +23,9 @@
       <a href="https://open.spotify.com/artist/5asGLnsKzGu0vUCRFSjibL" target="_blank">
         <img src="/billeder/spotyfi.svg" alt="Spotify" />
       </a>
-      <button>BOOK</button>
+      <a href="/src/components/FormComponent">
+  <button>BOOK HER</button>
+</a>
     </div>
 
     <!-- Menu (teksten) -->
