--- a/src/pages/acting.astro
+++ b/src/pages/acting.astro
@@ -18,13 +18,7 @@ import FormComponent from "../components/FormComponent.astro";
       </div>
 
       <div class="container">
-        <Button />
-
-        <div class="spotify">
-          <img class="img" src="/billeder/imdb.svg" alt="" />
-          <p class="p"><br />EXPLORE ON <br /><br />IMDB<br /></p>
-          <img src="/billeder/Arrow.jpg" alt="pil" />
-        </div>
+        <Spotyfi />
       </div>
 
       <div>
@@ -282,7 +276,7 @@ import FormComponent from "../components/FormComponent.astro";
     }
 
     .img2 {
-      display: none;
+      display: grid;
     }
     .img3 {
       display: none;
