--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -4,12 +4,18 @@
 
 <style>
   button {
-    padding: 20px 40px;
+    padding: 20px;
     font-size: 25px;
     font-weight: bold;
     background-color: #6c0000;
     color: white;
     border: none;
     border-radius: 35px;
+  }
+
+  @media (max-width: 1024px) {
+    button {
+      font-size: 10px;
+    }
   }
 </style>
