video på forside

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,7 @@ import About from "../components/About.astro";
 import Instagramrulle from "../components/Instagramrulle.astro";
 import Nyhedsbrev from "../components/Nyhedsbrev.astro";
 import FormComponent from "../components/FormComponent.astro";
+import Forsidevideo from "../components/Forsidevideo.astro";
 ---
 
 <Layout>
@@ -17,6 +18,7 @@ import FormComponent from "../components/FormComponent.astro";
     <Header title="YEPHA" />
 
     <main>
+      <Forsidevideo />
       <!-- <Nyhedsbrev /> -->
       <Spotyfi />
       <Liveevents />
