--- a/src/components/Forsidevideo.astro
+++ b/src/components/Forsidevideo.astro
@@ -1,4 +1,4 @@
-<iframe width="100%" height="615" src="https://www.youtube.com/embed/ioPg85wLD_I?si=FtyF4F7L-ITiMo6U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="100%" height="615" src="https://www.youtube.com/embed/ioPg85wLD_I?si=FtyF4F7L-ITiMo6U" title="YouTube video player" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen> </iframe>
 
 <style>
   video {
