--- a/src/pages/acting.astro
+++ b/src/pages/acting.astro
@@ -276,10 +276,13 @@ import FormComponent from "../components/FormComponent.astro";
     }
 
     .img2 {
-      display: grid;
+      display: flex;
+      flex-direction: row; /* Align items in a row */
+      justify-content: center; /* Center items horizontally */
+      flex-wrap: wrap;
     }
     .img3 {
-      display: none;
+      display: grid;
     }
 
     .part3 {
