--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,7 +12,6 @@
   <div class="nav_container">
     <!-- Ikoner og knap i én række -->
 
-
     <div class="icon_button_row">
       <a href="https://www.tiktok.com/@_yepha" target="_blank">
         <img src="/billeder/tiktok.svg" alt="TikTok" />
@@ -23,9 +22,9 @@
       <a href="https://open.spotify.com/artist/5asGLnsKzGu0vUCRFSjibL" target="_blank">
         <img src="/billeder/spotyfi.svg" alt="Spotify" />
       </a>
-      <a href="/src/components/FormComponent">
-  <button>BOOK HER</button>
-</a>
+      <a href="/">
+        <button>BOOK HER</button>
+      </a>
     </div>
 
     <!-- Menu (teksten) -->
@@ -37,8 +36,6 @@
 </footer>
 
 <style>
-
-
   /*------------ DET HER ER MOBIL------------ */
   @media (max-width: 1024px) {
     footer {
