--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -1,6 +1,4 @@
-<a href="/src/components/FormComponent">
-  <button>BOOK HER</button>
-</a>
+<a href="/"><div class="special-component"><button>BOOK HER</button></div></a>
 
 <style>
   button {
