--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -1,4 +1,4 @@
-<a href="/"><div class="special-component"><button>BOOK HER</button></div></a>
+<a href="/#formis"><div class="special-component"><button>BOOK HER</button></div></a>
 
 <style>
   button {
