--- a/src/components/FormComponent.astro
+++ b/src/components/FormComponent.astro
@@ -86,7 +86,7 @@ import Button from "../components/Button.astro";
 </style>
 
 <a href="/src/components/FormComponent">
-  <div class="special-component">
+  <div class="special-component" id="formis">
     <h1>BOOK HER</h1>
     <p>Udfyld formularen nedenfor eller send en mail til mig på kontakt@jeppewahlstrom.dk</p>
     <form action="#" method="post">
