instagram rulle no strech

--- a/src/components/Instagramrulle.astro
+++ b/src/components/Instagramrulle.astro
@@ -61,7 +61,7 @@
   .gallery img {
   flex-shrink: 0; /* Forhindrer billeder i at krympe */
   width: 20%;
-  height: auto;
+  height: 100%;
   }
 
   .billede1 {
