--- a/src/components/Forsidevideo.astro
+++ b/src/components/Forsidevideo.astro
@@ -1,10 +1,31 @@
-<iframe width="100%" height="615" src="https://www.youtube.com/embed/ioPg85wLD_I?si=FtyF4F7L-ITiMo6U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+<!-- <iframe 
+  width="100%" 
+  height="700px" 
+  src="https://youtu.be/ioPg85wLD_I/embed/VIDEO_ID?autoplay=1&loop=1&playlist=VIDEO_ID&modestbranding=1&controls=0&showinfo=0" 
+  allow="autoplay; encrypted-media" 
+  allowfullscreen>
+</iframe> -->
+
+
+  <!-- <video  width="100%" height="700px"  controls>
+        <source src="https://youtu.be/ioPg85wLD_I" type="video/mp4">
+        
+ </video> -->
+
+  <div class="video">
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/ioPg85wLD_I?si=UMo6qiGn1rNWYWYB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  </div>
+
 
 <style>
   video {
     width: 100%;
     height: 100%;
     object-fit: cover;
+      allow="autoplay;
+
   }
 
   @media (max-width: 1024px) {
