book knap i footer virker

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -22,7 +22,7 @@
       <a href="https://open.spotify.com/artist/5asGLnsKzGu0vUCRFSjibL" target="_blank">
         <img src="/billeder/spotyfi.svg" alt="Spotify" />
       </a>
-      <a href="/">
+      <a href="/#formis">
         <button>BOOK HER</button>
       </a>
     </div>
