--- a/src/components/Forsidevideo.astro
+++ b/src/components/Forsidevideo.astro
@@ -14,14 +14,11 @@
         
  </video> -->
 
-  <div class="video">
-
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/ioPg85wLD_I?si=UMo6qiGn1rNWYWYB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-  </div>
-
-<iframe width="100%" height="615" src="https://www.youtube.com/embed/ioPg85wLD_I?si=FtyF4F7L-ITiMo6U" title="YouTube video player" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen> </iframe>
-
-
+   <video width="1000" height="780" loop autoplay muted preload="auto">
+                <source src="jeppeherosekvens.mp4" type="video/mp4">
+                Din browser understøtter ikke videofunktionen.
+            </video>
+<video src="jeppeherosekvens.mp4"> <source src="jeppeherosekvens.mp4" type="video/mp4"></video>
 <style>
   video {
     width: 100%;
