--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@ const { title } = Astro.props;
     <a href="/">HOME</a>
     <a href="/music">MUSIC</a>
     <a href="/acting">ACTING</a>
-     <a href="/src/components/FormComponent.astro/">BOOK</a>
+    <a href="/#formis">BOOK</a>
   </nav>
 
   <!-- Burger-ikon til mobile enheder -->
