--- a/src/components/FormComponent.astro
+++ b/src/components/FormComponent.astro
@@ -71,6 +71,12 @@ import Button from "../components/Button.astro";
     justify-content: center; /* Aligns horizontally */
     align-items: center; /* Aligns vertically */
   }
+  .form_botton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
 
   @media (max-width: 1000px) {
     .form-group {
@@ -85,7 +91,7 @@ import Button from "../components/Button.astro";
   }
 </style>
 
-<a href="/src/components/FormComponent">
+
   <div class="special-component" id="formis">
     <h1>BOOK HER</h1>
     <p>Udfyld formularen nedenfor eller send en mail til mig på kontakt@jeppewahlstrom.dk</p>
@@ -107,10 +113,14 @@ import Button from "../components/Button.astro";
         <label for="email">YOUR MESSAGE:</label>
         <input type="email" id="email" name="email" required />
       </div>
-      <Button />
+      
+ <div class="form_botton">
+            <Button />
+ </div>
+  
     </form>
   </div>
-</a>
+
 
 <script>
   const toggleFormBtn = document.getElementById("toggleFormBtn");
