--- a/src/components/Forsidevideo.astro
+++ b/src/components/Forsidevideo.astro
@@ -18,8 +18,9 @@
                 <source src="jeppeherosekvens.mp4" type="video/mp4">
                 Din browser understøtter ikke videofunktionen.
             </video>
-<video src="jeppeherosekvens.mp4"> <source src="jeppeherosekvens.mp4" type="video/mp4"></video>
+<video src="/httpd.www/kea/eksamen/JeppeWahlstrom/jeppeherosekvens.mp4"> <source src="jeppeherosekvens.mp4" type="video/mp4"></video>
 <style>
+
   video {
     width: 100%;
     height: 100%;
