--- a/src/pages/acting.astro
+++ b/src/pages/acting.astro
@@ -13,8 +13,8 @@ import FormComponent from "../components/FormComponent.astro";
     <Header title="ACTING" />
     <main>
       <div class="actorhero1">
-        <img src="/billeder/actingimgvenstre.webp" alt="billede1" />
-        <img src="/billeder/actingimghøjre.webp" alt="billede2" />
+        <img class="colum" src="/billeder/actingimgvenstre.webp" alt="billede1" />
+        <img class="colum" src="/billeder/actingimghøjre.webp" alt="billede2" />
       </div>
 
       <div class="container">
