--- a/src/components/Forsidevideo.astro
+++ b/src/components/Forsidevideo.astro
@@ -1,32 +1,10 @@
+<video autoplay muted loop src="http://albelynglev.dk/kea/eksamen/JeppeWahlstrom/jeppeherosekvens.mp4"></video>
 
-
-<!-- <iframe 
-  width="100%" 
-  height="700px" 
-  src="https://youtu.be/ioPg85wLD_I/embed/VIDEO_ID?autoplay=1&loop=1&playlist=VIDEO_ID&modestbranding=1&controls=0&showinfo=0" 
-  allow="autoplay; encrypted-media" 
-  allowfullscreen>
-</iframe> -->
-
-
-  <!-- <video  width="100%" height="700px"  controls>
-        <source src="https://youtu.be/ioPg85wLD_I" type="video/mp4">
-        
- </video> -->
-
-   <video width="1000" height="780" loop autoplay muted preload="auto">
-                <source src="jeppeherosekvens.mp4" type="video/mp4">
-                Din browser understøtter ikke videofunktionen.
-            </video>
-<video src="/httpd.www/kea/eksamen/JeppeWahlstrom/jeppeherosekvens.mp4"> <source src="jeppeherosekvens.mp4" type="video/mp4"></video>
 <style>
-
   video {
     width: 100%;
-    height: 100%;
+    height: 600px;
     object-fit: cover;
-      allow="autoplay;
-
   }
 
   @media (max-width: 1024px) {
