font rettelse footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -66,6 +66,8 @@
 
     .menu {
       display: flex;
+       font-family: "Lato", sans-serif;
+    font-style: normal;
       gap: 15px; /* Plads mellem links */
       justify-content: center;
       flex-wrap: nowrap; /* Ingen linjebrud */
@@ -129,6 +131,8 @@
     }
 
     .menu {
+       font-family: "Lato", sans-serif;
+    font-style: normal;
       display: flex;
       gap: 100px;
       padding-right: 35px;
