yepah logo virker

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@
 
 <footer>
   <div class="container1">
-    <a href="index.astro">
+    <a href="/">
       <img src="/billeder/sortlogo.svg" alt="" />
     </a>
   </div>
