--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,6 +3,7 @@ const { title } = Astro.props;
 ---
 
 <header>
+  <link rel="icon" href="/billeder/sortlogo.svg" sizes="40x40" />
   <a href="/" class="logo">{title}</a>
   <nav class="menu">
     <a href="/">HOME</a>
