--- a/src/components/Singlercard.astro
+++ b/src/components/Singlercard.astro
@@ -24,6 +24,10 @@ console.log(id);
       padding: 30px;
       color: black;
       text-decoration: none;
+      font-size: 10px;
+      font-family: "Inter", serif;
+      font-style: normal;
+      text-align: center;
     }
   </style>
 
