--- a/src/components/Singlercard.astro
+++ b/src/components/Singlercard.astro
@@ -16,19 +16,19 @@ console.log(id);
     </div>
   </div>
 
-
   <style>
- 
     .albumcovers {
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
       gap: 20px;
       padding: 30px;
-    
+      color: black;
+      text-decoration: none;
+      font-size: 10px;
+      font-family: "Inter", serif;
+      font-style: normal;
+      text-align: center;
     }
-
-
-
   </style>
 
   <script>
