--- a/src/pages/music.astro
+++ b/src/pages/music.astro
@@ -52,7 +52,8 @@ import Spotyfi from "../components/Spotyfi.astro";
       <h1 class="h2singler">SINGLER</h1>
       <Singlercard />
 
-      <h1 class="h2desktop">NY MUSIK UDE SNART // NY MUSIK UDE SNART</h1>
+      <h1 class="h2desktop">NY MUSIK UDE SNART // NY MUSIK UDE SNART // NY MUSIK UDE SNART // NY MUSIK UDE SNART // NY MUSIK UDE SNART // NY MUSIK UDE SNART</h1>
+     
     </main>
 
     <Footer />
@@ -73,8 +74,9 @@ import Spotyfi from "../components/Spotyfi.astro";
       font-size: 50px;
       color: #a52913;
       animation: scroll-left 60s linear infinite;
-      display: flex;
+     white-space: nowrap;
       flex-wrap: nowrap;
+      display: inline-block;
     }
     .viewall {
       font-family: "Lato", sans-serif;
