--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,7 @@ import Forsidevideo from "../components/Forsidevideo.astro";
 
 <Layout>
   <body>
+    <Nyhedsbrev/>
     <Header title="YEPHA" />
     <main>
       <Forsidevideo />
