--- a/src/components/Singlercard.astro
+++ b/src/components/Singlercard.astro
@@ -17,6 +17,9 @@ console.log(id);
   </div>
 
   <style>
+    img {
+      max-width: 250px;
+    }
     .albumcovers {
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
@@ -52,14 +55,14 @@ console.log(id);
 
         // Byg HTML dynamisk for hver single
         singler.forEach((single) => {
-          const singleimage_url = `billeder/${single.image_url}.webp`;
+          const singleimage_url = `billeder/${single.image_url}`;
 
           // HTML skabelon for et single album
           const productHTML = `
             <div class="felx-col">
               <a href="${single.link_url || "link_url"}">
                 <div class="img">
-                <img src="${single.image_url}.webp" alt="${single.image_url || " Album cover"}" />
+                <img src="${singleimage_url}" alt="Album cover"}" />
                   <h2 class="h2">${single.overskrift || "Titel mangler"}</h2>
                   <p class="aarstal">${single.underoverskrift || "År ukendt"}</p>
                 </div>
