--- a/src/components/Spotyfi.astro
+++ b/src/components/Spotyfi.astro
@@ -13,7 +13,8 @@ const { title } = Astro.props;
       <img class="img" src="/billeder/spotyfi.svg" alt="Spotify" />
     </a>
     <p class="p"><br />EXPLORE ON <br /><br />SPOTIFY<br /></p>
-    <img class="arrow" src="/billeder/Arrow.jpg" alt="pil" />
+    <div class="line"></div>
+    <div class="arrow"></div> 
   </div>
 </div>
 
@@ -21,6 +22,20 @@ const { title } = Astro.props;
   .img {
     width: 100px;
   }
+
+  .arrow {
+      border-top: 15px solid transparent; /* Øvre trekant-kant */
+      border-bottom: 15px solid transparent; /* Nedre trekant-kant */
+      border-right: 40px solid #333; /* Venstre trekant (danner pilen) */
+    }
+
+    .line {
+      position: absolute;
+      width: 30%; /* Længden på stregen */
+      height: 4px; /* Tykkelse på stregen */
+      
+     border-right: 300px solid #333;
+    }
 
   .spotify {
     display: flex;
